refactor(controller): DTOs de respuesta, seguridad y limpieza general